--- a/Login-form-main/index.html
+++ b/Login-form-main/index.html
@@ -71,6 +71,7 @@
       <button class="form-button margin forgot-button" type="submit">
         Sign In
       </button>
+      <button class="cancel">Cancel</button>
     </div>
     <footer class="footer">
       <p class="footer-p">OTHER SIGN-IN PLATFORMS</p>
